# staff-at-firmware

./: Cargo.toml  build.rs  extra_build.py  platformio.ini  release.sh
lib/ws_logger/: ws_logger.cpp
src/: battery.rs  consts.rs  main.cpp  main.rs  rfid.rs  state.rs  structs.rs  utils.hpp  ws.rs
src/utils/: backtrace_store.rs  logger.rs
staffat-firmware/: Cargo.toml  build.rs
staffat-firmware/.cargo/: config.toml
staffat-firmware/src/: consts.rs  main.rs  rfid.rs  structs.rs
staffat-firmware/src/utils/: mod.rs
