[package]
edition = "2021"
name    = "staff-at-firmware"
version = "0.1.0"

[dependencies]
embassy-net = { version = "0.6.0", features = ["tcp", "udp", "multicast", "dhcpv4", "medium-ethernet", "proto-ipv4", "dns"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [ "esp32c3", "exception-handler", "panic-handler", "println", "custom-pre-backtrace", "custom-halt" ] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.1", features = ["esp32c3", "log"] }
log = { version = "0.4.26" }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["arch-riscv32", "nightly"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
esp-wifi = { version = "0.13.0", features = ["esp32c3", "coex"] }
esp-storage = { version = "0.5.0", features = ["esp32c3"] }
embedded-storage = "0.3.1"
esp-hal-wifimanager = { git = "https://github.com/filipton/esp-hal-wifimanager", default-features = false, features = ["ap", "ble"] }
serde = { version = "1.0.219", features = ["alloc", "derive"], default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
embedded-hal = "1.0.0"
esp-hal-mdns = "0.1.0"
nb = "1.1.0"
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
ws-framer = { version = "=0.2.2", features = ["alloc"] }
embedded-hal-async = "1.0.0"
getrandom = { version = "=0.2.15", features = ["custom"] }
dyn-smooth = "0.2.0"
esp-hal-ota = { version = "0.4.0", features = ["esp32c3"] }
esp32c3 = { version = "0.28.0" }
anyhow = { version = "1.0.97", default-features = false }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-tls = { version = "0.17.0", default-features = false, features = ["alloc", "embedded-io-adapters", "log"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
esp-hal-mfrc522 = { version = "0.2.1", features = ["embassy-time"] }
heapless = "0.8.0"

[features]
default = ["esp32c3"]
esp32c3 = []
gen_version = []
release_build = []

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[build-dependencies]
dotenvy = "0.15.7"
